--- a/packages.html
+++ b/packages.html
@@ -338,15 +338,15 @@
                 <!--  Прогулка На Днепре -->
                 <div class="col-lg-3 col-sm-6 mb-5">
                     <div class="image-tour position-relative">
-                        <a href="https://novipovorot.pp.ua/page-walk-on-Dnieper.html">
-                            <img src="images/walk-on-Dnieper-min.jpg" alt="Прогулка На Днепре" class="img-fluid" />
+                        <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">
+                            <img src="images/walk-on-Dnieper-min.jpg" alt="Запорожье На Днепре" class="img-fluid" />
                         </a>
                         <p><span class="fa fa-tags"></span> <span>105грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Прогулка на Днепре</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье на Днепре</h6>
                         <h5 class="my-2">
-                            <a href="https://novipovorot.pp.ua/page-walk-on-Dnieper.html">Прогулка на Днепре</a>
+                            <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">Запорожье на Днепре</a>
                         </h5>
                         <p class="">Экскурсия в Запорожье на Днепре...</p>
                         <ul class="listing mt-3">
