--- a/packages.html
+++ b/packages.html
@@ -344,7 +344,7 @@
                         <p><span class="fa fa-tags"></span> <span>105грн.</span></p>
                     </div>
                     <div class="package-info">
-                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье на Днепре</h6>
+                        <h6 class="mt-1"><span class="fa fa-map-marker mr-2"></span>Запорожье, Украина</h6>
                         <h5 class="my-2">
                             <a href="https://novipovorot.pp.ua/page-Zaporizhzhia-on-Dnieper.html">Запорожье на Днепре</a>
                         </h5>
