--- a/booking.html
+++ b/booking.html
@@ -139,7 +139,10 @@
                             </div>
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
-                                    <option>Тур</option> 
+                                    <option>Тур</option>
+                                    <option>Яворовская Ниагара</option>
+                                    <option>Запорожье на Днепре</option>
+                                    <option>Львов на Выходные</option> 
                                     <option>Золотые Прииски Закарпатья </option>
                                     <option>Фестиваль Воздушных Шаров </option>
                                     <option>Сырная Ферма И Пасека</option>
