--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 
 <head>
-    <title>Прогулка на Днепре | Новый поворот </title>
+    <title>Запорожье на Днепре | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
