--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -14,7 +14,7 @@
     <meta property="og:description" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-walk-on-Dnieper.html" />
-    <meta property="og:image" content="/images/on-page.jpg">
+    <meta property="og:image" src="images/walk-on-Dnieper-min.jpg">
     <!--End Open Graph data-->
 
     <script>
