--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="description"
-        content="Туры выходного дня 'Новый поворот', Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
+        content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, Экскурсия с "огоньком", Прогулка с изюминкой">
 
     <!-- Open Graph data-->
     <meta property="og:title" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
