--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -6,8 +6,8 @@
     <title>Запорожье на Днепре | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description"
-        content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, Экскурсия с "огоньком", Прогулка с изюминкой">
+    <meta name="description" content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, 
+        Экскурсия с 'огоньком', Прогулка с изюминкой">
 
     <!-- Open Graph data-->
     <meta property="og:title" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
@@ -30,11 +30,11 @@
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
-    <!-- css files -->
+
+    <!-- bootstrap css -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />-->
-    <!-- bootstrap css -->
+
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
@@ -46,24 +46,6 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-
-    <!-- Facebook Pixel Code -->
-    <!-- <script>
-        !function(f,b,e,v,n,t,s)
-        {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-        n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-        if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-        n.queue=[];t=b.createElement(e);t.async=!0;
-        t.src=v;s=b.getElementsByTagName(e)[0];
-        s.parentNode.insertBefore(t,s)}(window, document,'script',
-        'https://connect.facebook.net/en_US/fbevents.js');
-        fbq('init', '3921253151274858');
-        fbq('track', 'PageView');
-        </script>
-        <noscript><img height="1" width="1" style="display:none"
-        src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-        /></noscript>-->
-    <!-- End Facebook Pixel Code -->
 
 </head>
 
@@ -100,11 +82,11 @@
     </section>
     <!-- //banner -->
 
-
     <!--single page-->
     <section class="single page py-lg-4 py-md-3 py-sm-3 py-3" id="single-page">
         <div class="container py-lg-5 py-md-4 py-sm-4 py-3">
             <div class="row df-cntr">
+
                 <!-- Хлебные крошки -->
                 <div class="col-lg-8 col-xl-9 d-flex justify-content-start">
                     <nav aria-label="breadcrumb">
@@ -116,6 +98,7 @@
                     </nav>
                 </div>
                 <!-- //Хлебные крошки -->
+
                 <div class="col-lg-8 col-xl-9 main-title-text">
                     <h3 id="ZaporizhzhiaOnTheDnieper" class="title">Запорожье на Днепре</h3>
                 </div>
@@ -131,13 +114,16 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            <span id="ExcursionToZaporozhye">Экскурсия в Запорожье  на Днепре</span>, <span id="WalkWithTwist">прогулка с изюминкой</span>...
+                            <span id="ExcursionToZaporozhye">Экскурсия в Запорожье на Днепре</span>, <span
+                                id="WalkWithTwist">прогулка с изюминкой</span>...
                         </h4>
                         <p class="txt-alg-jf">
-                            Что ты знаешь о <span id="Zaporozhye">Запорожье</span>? Спорим что наша экскурсия тебя удивит ?
+                            Что ты знаешь о <span id="Zaporozhye">Запорожье</span>? Спорим что наша экскурсия тебя
+                            удивит ?
                             Мы знаем о самых привычных местах множество "изюминок" о которых ты даже не
                             догадывалась/лся!
-                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ <span id="ExcursionWithFire">ЭКСКУРСИЮ с настоящим инфо "ОГОНЬКОМ"</span>. Будь
+                            Именно ДЛЯ ТЕБЯ мы создали НОВУЮ АВТОРСКУЮ <span id="ExcursionWithFire">ЭКСКУРСИЮ с
+                                настоящим инфо "ОГОНЬКОМ"</span>. Будь
                             первым!
                         </p>
                         <hr>
@@ -146,6 +132,7 @@
                             <li><span class="fa fa-tags mr-2"></span>Стоимость: <span>95 Грн</span></li>
                             <li><span class="fa fa-clock-o mr-2"></span>Продолжительность: <span>1 День</span></li>
                         </ul>
+
                         <!-- Alert info -->
                         <div class="alert alert-info mt-3 ">
                             <button type="button" class="close" data-dismiss="alert">&times;</button>
@@ -202,8 +189,8 @@
                                         class="fa fa-paper-plane"></span></a></li>
                         </ul>
                         </p>
-                        <!-- Описание экскурсии -->
 
+                        <!-- Описание экскурсии -->
                         <div class="accordion mt-3 mb-3" id="accordionExample">
                             <div class="card">
                                 <div class="card-header" id="headingOne">
@@ -239,6 +226,7 @@
                                             Окончание экскурсии 12:30-13:00 <span
                                                 class="fa fa-smile-o text-warning"></span>
                                         </p>
+
                                         <!-- Alert danger -->
                                         <div class="alert alert-danger mt-3 ">
                                             <span class="fa fa-exclamation-triangle"></span><strong>
@@ -261,7 +249,6 @@
                                 </div>
                             </div>
                         </div>
-
                         <!-- //Описание экскурсии -->
 
                         <div class="alert alert-success">
@@ -299,16 +286,25 @@
                         <p>
                             Тексты подсказок:
                         </p>
-                       
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')" class="text-white" title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')" class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия в Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')" class="text-white" title="Новый Поворот Запорожье" href="#logo">Новый Поворот Запорожье</a></span>
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ZaporizhzhiaOnTheDnieper')" class="text-white" title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на Днепре</a></span>
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionWithFire')" class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с "огоньком"</a></span>
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')" class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с изюминкой</a></span>
-                        
-                                <!-- liq pay -->
-                        <!--<div id="liqpay_checkout"></div>-->
+
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')"
+                                class="text-white" title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')"
+                                class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия
+                                в Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
+                                class="text-white" title="Новый Поворот Запорожье" href="#logo">Новый Поворот
+                                Запорожье</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a
+                                onclick="selectText('ZaporizhzhiaOnTheDnieper')" class="text-white"
+                                title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на
+                                Днепре</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionWithFire')"
+                                class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с
+                                "огоньком"</a></span>
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')"
+                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с
+                                изюминкой</a></span>
                     </div>
                 </div>
             </div>
@@ -446,6 +442,7 @@
     </div>
     <!-- move top -->
 
+    <!-- Java Script -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -455,9 +452,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-    <script>
-        console.log("Туры выходного дня 'Новый Поворот'");
-    </script>
+
     <!--Выделение текста при клике на хештэг-->
     <script>
         function selectText(containerid) {
@@ -474,6 +469,10 @@
         }
     </script>
     <!--//Выделение текста при клике на хештэг-->
+
+    <script>
+        console.log("Туры выходного дня 'Новый Поворот'");
+    </script>
 </body>
 
 </html>
