--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
     <meta name="keywords" content="Туры выходного дня 'Новый поворот'" />
-    <meta name="description" content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
+    <meta name="description"
+        content="Туры выходного дня 'Новый поворот' | Контакты: +380985771579, +380506702264, dovgalyv@ukr.net | Экскурсии | Путешевствия | Походы | Мастер-классы | Дегустации">
 
-     <!-- Open Graph data-->
+    <!-- Open Graph data-->
     <meta property="og:title" content="Туры выходного дня 'Новый поворот' | Свяжитесь С Нами">
-    <meta property="og:description" content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! "/>
-    <meta property="og:type" content="website"/>
-    <meta property="og:url" content="https://novipovorot.pp.ua/contact.html"/>
+    <meta property="og:description"
+        content="Сделаем Вашу жизнь ярче и разнообразнее. Экскурсии, походы, мастер-классы и дегустации... Путешествуйте с улыбкой! " />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://novipovorot.pp.ua/contact.html" />
     <meta property="og:image" content="images/novi-povorot.jpg">
     <!--End Open Graph data-->
     <script>
@@ -28,9 +30,11 @@
     <!--favicon.ico-->
     <link rel="shortcut icon" href="./images/map-signs-solid.svg" />
     <!--//favicon.ico-->
-    <!-- css files -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-    <!--<link href="css/bootstrap.css" rel='stylesheet' type='text/css' />--><!-- bootstrap css -->
+
+    <!-- bootstrap css -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link href="css/style.css" rel='stylesheet' type='text/css' /><!-- custom css -->
     <link href="css/font-awesome.min.css" rel="stylesheet"><!-- fontawesome css -->
     <!-- //css files -->
@@ -42,24 +46,6 @@
         href="//fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i"
         rel="stylesheet">
     <!-- //google fonts -->
-
-    <!-- Facebook Pixel Code -->
-    <!--<script>
-    !function(f,b,e,v,n,t,s)
-    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-    n.queue=[];t=b.createElement(e);t.async=!0;
-    t.src=v;s=b.getElementsByTagName(e)[0];
-    s.parentNode.insertBefore(t,s)}(window, document,'script',
-    'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '3921253151274858');
-    fbq('track', 'PageView');
-    </script>
-    <noscript><img height="1" width="1" style="display:none"
-    src="https://www.facebook.com/tr?id=3921253151274858&ev=PageView&noscript=1"
-    /></noscript>-->
-    <!-- End Facebook Pixel Code -->
 
 </head>
 
@@ -96,7 +82,6 @@
     </section>
     <!-- //banner -->
 
-
     <!-- Contact -->
     <section class="contact py-5">
         <div class="container py-lg-5 py-sm-3">
@@ -132,12 +117,12 @@
                     <ul class="social_section_1info mt-2">
                         <li class="mb-2 facebook"><a href="https://www.facebook.com/284598912231286/"><span
                                     class="fa fa-facebook"></span></a></li>
-                        <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span
-                                        class="fa fa-vk"></span></a></li>
+                        <li class="mb-2 vk"><a href="https://vk.com/novipovorotppua"><span class="fa fa-vk"></span></a>
+                        </li>
                         <li class="mb-2 instagram"><a href="https://www.instagram.com/dovgalyv.zp/"><span
                                     class="fa fa-instagram"></span></a></li>
                         <li class="mb-2 twitter"><a href="https://twitter.com/novipovorot"><span
-                                        class="fa fa-twitter"></span></a></li>
+                                    class="fa fa-twitter"></span></a></li>
                         <li class="viber">
                             <a
                                 href="https://invite.viber.com/?g2=AQAI6YLBmgfH7kiQ8udTUV2l%2BFIhhpFkz60dsKyAsnZiA6r%2FOtLLImR2o3mLR9Bp">
@@ -170,13 +155,16 @@
                                 <input type="text" name="Имя" class="form-control" placeholder="Имя" required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <input type="email" name="Электронная почта" class="form-control" placeholder="Эл.почта" required="">
+                                <input type="email" name="Электронная почта" class="form-control" placeholder="Эл.почта"
+                                    required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <input type="text" name="Телефон" class="form-control" placeholder="Телефон" required="">
+                                <input type="text" name="Телефон" class="form-control" placeholder="Телефон"
+                                    required="">
                             </div>
                             <div class="form-group contact-forms">
-                                <textarea name="Сообщение"  class="form-control" placeholder="Сообщение" rows="3" required=""></textarea>
+                                <textarea name="Сообщение" class="form-control" placeholder="Сообщение" rows="3"
+                                    required=""></textarea>
                             </div>
                             <button class="btn btn-block sent-butnn">Отправить</button>
                         </form>
@@ -267,23 +255,24 @@
                             <ul class="col-6 links">
                                 <li><a href="https://novipovorot.pp.ua/page-Turkey.html" class="scroll">Турция</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Beer.html" class="scroll">Пиво</a></li>
-                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html" class="scroll">Одесса</a>
+                                <li><a href="https://novipovorot.pp.ua/page-Odessa-on-march.html"
+                                        class="scroll">Одесса</a>
                                 </li>
                                 <li><a href="https://novipovorot.pp.ua/page-Karpati.html" class="scroll">Карпаты</a>
                                 </li>
                             </ul>
                             <ul class="col-6 links">
-                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html"
-                                        class="scroll">Лимонарий</a></li>
+                                <li><a href="https://novipovorot.pp.ua/page-Limonariy.html" class="scroll">Лимонарий</a>
+                                </li>
                                 <li><a href="https://novipovorot.pp.ua/page-LOL.html" class="scroll">ЛОЛ</a></li>
                                 <li><a href="https://novipovorot.pp.ua/page-Hortica.html" class="scroll">Хортица</a>
                                 </li>
                             </ul>
                         </div>
                     </div>
-                    
+
                     <!-- Begin Mailchimp Signup Form -->
-                     <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
+                    <div id="mc_embed_signup" class="col-lg-3 col-sm-6 mt-lg-0 mt-4 footer-grid_section_1its_w3">
                         <div class="footer-title">
                             <h3>Новостная рассылка</h3>
                         </div>
@@ -293,14 +282,17 @@
                                 обновления.
                             </p>
 
-                            <form action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                            <form
+                                action="https://novipovorot.us7.list-manage.com/subscribe/post?u=325c75dce90af10f77da58955&amp;id=2af7a2a416"
+                                method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form"
+                                class="validate" target="_blank" novalidate>
                                 <div id="mc_embed_signup_scroll">
-                                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="Введите адрес электронной почты..." required>
-                                   <!-- <input type="text" name="b_325c75dce90af10f77da58955_2af7a2a416" tabindex="-1" value="">-->
-
-                                        <button class="btn1" id="mc-embedded-subscribe"><i class="fa fa-paper-plane" aria-hidden="true"></i></button>
-                                        <div class="clearfix"> </div>
-                                </div>	
+                                    <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL"
+                                        placeholder="Введите адрес электронной почты..." required>
+                                    <button class="btn1" id="mc-embedded-subscribe"><i class="fa fa-paper-plane"
+                                            aria-hidden="true"></i></button>
+                                    <div class="clearfix"> </div>
+                                </div>
                             </form>
                         </div>
 
@@ -325,8 +317,8 @@
         </a>
     </div>
     <!-- move top -->
- <script>
-       console.log("Туры выходного дня 'Новый Поворот'");
+    <script>
+        console.log("Туры выходного дня 'Новый Поворот'");
     </script>
 
 </body>
