--- a/page-Zaporizhzhia-on-Dnieper.html
+++ b/page-Zaporizhzhia-on-Dnieper.html
@@ -288,22 +288,22 @@
                         </p>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')"
-                                class="text-white" title="Запорожье" href="#Zaporozhye">Запорожье</a></span>
+                                class="text-white" title="Запорожье" href="#Zaporozhye" rel="tag">Запорожье</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToZaporozhye')"
                                 class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToZaporozhye">Экскурсия
                                 в Запорожье</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
-                                class="text-white" title="Новый Поворот Запорожье" href="#logo">Новый Поворот
+                                class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот
                                 Запорожье</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a
                                 onclick="selectText('ZaporizhzhiaOnTheDnieper')" class="text-white"
-                                title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper">Запорожье на
+                                title="Запорожье на Днепре" href="#ZaporizhzhiaOnTheDnieper" rel="tag">Запорожье на
                                 Днепре</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionWithFire')"
-                                class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire">Экскурсия с
+                                class="text-white" title="Экскурсия с 'огоньком'" href="#ExcursionWithFire" rel="tag">Экскурсия с
                                 "огоньком"</a></span>
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('WalkWithTwist')"
-                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist">Прогулка с
+                                class="text-white" title="Прогулка с изюминкой" href="#WalkWithTwist" rel="tag">Прогулка с
                                 изюминкой</a></span>
                     </div>
                 </div>
