--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -318,6 +318,8 @@
                         </div>
 
                         <hr>
+                    
+                       <!-- Help texts -->
                         <p>
                             Тексты подсказок:
                         </p>
@@ -364,7 +366,7 @@
                                 class="text-white" title="Прогулка с изюминкой" href="#EndlessDesert"
                                 rel="tag">Бескрайняя пустыня
                             </a></span>
-
+                       <!-- //Help texts -->
                     </div>
                 </div>
             </div>
