--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -232,8 +232,8 @@
                                             - прогулка экскурсия по Дворечанскому национальному
                                             парку (Меловые горы). Мы
                                             увидим потрясающие горы из кальция, ослепляющие
-                                            своей белизной.СДЕЛАЕМ ОООЧЕНЬ МНОГО ФОТО СРЕДИ БЕЛЫХ СКАЛ для
-                                            Instagram.
+                                            своей белизной. СДЕЛАЕМ ОООЧЕНЬ МНОГО ФОТО СРЕДИ БЕЛЫХ СКАЛ для
+                                            <span class="fa fa-instagram">Instagram.</span>
                                             Цветущие травы: ковыль, шалфей, донской громовик и лен, как ровненький
                                             газон небольшого размера,
                                             ведь кальций самый искусный садовник не дает им разрастись. Сделаем привал в
