--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -6,15 +6,15 @@
     <title>Харьков из Запорожья | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Туры выходного дня 'Новый поворот', Запорожье, Экскурсия в Запорожье, Новый Поворот Запорожье, Запорожье на Днепре, 
-        Экскурсия с 'огоньком', Прогулка с изюминкой">
+    <meta name="description" content="Белоснежные горы Харькова, Печенежское водохранилище, Экскурсия в Харьков, Новый Поворот, Меловые горы, Харьков из Запорожья, Кицевская пустыня,
+                                      Голубая гладь, Бескрайняя пустыня">
 
     <!-- Open Graph data-->
-    <meta property="og:title" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой">
-    <meta property="og:description" content=" Экскурсия в Запорожье на Днепре, прогулка с изюминкой " />
+    <meta property="og:title" content="Экскурсия в Харьков из Запорожья">
+    <meta property="og:description" content="Белоснежные горы Харькова Печенежское водохранилище Экскурсия в Харьков Новый Поворот Меловые горы Харьков из Запорожья Кицевская пустыня Голубая гладь Бескрайняя пустыня " />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://novipovorot.pp.ua/page-walk-on-Dnieper.html" />
-    <meta property="og:image" src="images/walk-on-Dnieper-min.jpg">
+    <meta property="og:url" content="https://novipovorot.pp.ua/page-Kharkov.html" />
+    <meta property="og:image" src="images/Kharkov-max.jpg">
     <!--End Open Graph data-->
 
     <script>
