--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -120,7 +120,7 @@
                             <span id="ExcursionToKharkov">Хлопковые белоснежные горы Харькова.</span> Пикник в компании
                             сурков и лисичек.
 
-                            <span id="PechenezhskoeReservoirv">Купание в Печенежском водохранилище.</span>
+                            <span id="PechenezhskoeReservoir">Купание в Печенежском водохранилище.</span>
 
                             <span id="KitsevoDesert">Закат среди барханов Кицевской пустыни.</span>
                             Мы покажем, что в Украине есть потрясающие местадля отдыха, фото
