--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -117,7 +117,7 @@
                             Харьков из Запорожья
                         </h4>
                         <p class="txt-alg-jf">
-                            <span id="ExcursionToKharkov">Хлопковые белоснежные горы Харькова.</span> Пикник в компании
+                            <span id="Snow-WhiteMountainsOfKharkov">Хлопковые белоснежные горы Харькова.</span> Пикник в компании
                             сурков и лисичек.
 
                             <span id="PechenezhskoeReservoir">Купание в Печенежском водохранилище.</span>
@@ -326,11 +326,11 @@
 
                         <span class="badge rounded-pill bg-secondary"> <a
                                 onclick="selectText('Snow-WhiteMountainsOfKharkov')" class="text-white"
-                                title="Экскурсия в Запорожье" href="#ExcursionToKharkov" rel="tag">Белоснежные горы
+                                title="Экскурсия в Запорожье" href="#Snow-WhiteMountainsOfKharkov" rel="tag">Белоснежные горы
                                 Харькова</a></span>
 
 
-                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('Zaporozhye')"
+                        <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PechenezhskoeReservoir')"
                                 class="text-white" title="Запорожье" href="#PechenezhskoeReservoir"
                                 rel="tag">Печенежское водохранилище</a></span>
 
