--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -100,7 +100,7 @@
                 <!-- //Хлебные крошки -->
 
                 <div class="col-lg-8 col-xl-9 main-title-text">
-                    <h3 id="ExcursionToKharkov" class="title">Экскурсия в Харьков</h3>
+                    <h3 id="CottonMountainsOfKharkov" class="title">Хлопковые горы Харькова</h3>
                 </div>
                 <div class="col-lg-8 col-xl-9 blog-left-sub">
                     <img src="images/Kharkov-max.jpg" alt="news image" class="img-fluid">
@@ -113,8 +113,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <h4 class="mb-3" id="KharkovFromZaporozhye">
-                            Харьков из Запорожья
+                        <h4 class="mb-3">
+                            <span id="KharkovFromZaporozhye">Харьков из Запорожья.</span><span id="ExcursionToKharkov"> Экскурсия в Харьков</span>
                         </h4>
                         <p class="txt-alg-jf">
                             <span id="Snow-WhiteMountainsOfKharkov">Хлопковые белоснежные горы Харькова.</span> Пикник в компании
@@ -326,46 +326,52 @@
 
                         <span class="badge rounded-pill bg-secondary"> <a
                                 onclick="selectText('Snow-WhiteMountainsOfKharkov')" class="text-white"
-                                title="Экскурсия в Запорожье" href="#Snow-WhiteMountainsOfKharkov" rel="tag">Белоснежные горы
+                                title="Белоснежные горы Харькова" href="#Snow-WhiteMountainsOfKharkov" rel="tag">Белоснежные горы
                                 Харькова</a></span>
 
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('PechenezhskoeReservoir')"
-                                class="text-white" title="Запорожье" href="#PechenezhskoeReservoir"
+                                class="text-white" title="Печенежское водохранилище" href="#PechenezhskoeReservoir"
                                 rel="tag">Печенежское водохранилище</a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ExcursionToKharkov')"
-                                class="text-white" title="Экскурсия в Запорожье" href="#ExcursionToKharkov"
-                                rel="tag">Экскурсия
-                                в Харьков</a></span>
+                                class="text-white" title="Экскурсия в Харьков" href="#ExcursionToKharkov"
+                                rel="tag">Экскурсия в Харьков
+                            </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('logo')"
-                                class="text-white" title="Новый Поворот Запорожье" href="#logo" rel="tag">Новый Поворот
+                                class="text-white" title="Новый Поворот" href="#logo" rel="tag">Новый Поворот
                             </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('ChalkMountains')"
-                                class="text-white" title="Запорожье на Днепре" href="#ChalkMountains" rel="tag">Меловые
+                                class="text-white" title="Меловые горы" href="#ChalkMountains" rel="tag">Меловые
                                 горы</a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('KharkovFromZaporozhye')"
-                                class="text-white" title="Экскурсия с 'огоньком'" href="#KharkovFromZaporozhye"
+                                class="text-white" title="Харьков из Запорожья" href="#KharkovFromZaporozhye"
                                 rel="tag"> Харьков из Запорожья
                             </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('KitsevoDesert')"
-                                class="text-white" title="Прогулка с изюминкой" href="#KitsevoDesert"
+                                class="text-white" title="Кицевская пустыня" href="#KitsevoDesert"
                                 rel="tag">Кицевская пустыня
                             </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('BlueSurface')"
-                                class="text-white" title="Прогулка с изюминкой" href="#BlueSurface" rel="tag">Голубая
+                                class="text-white" title="Голубая гладь" href="#BlueSurface" rel="tag">Голубая
                                 гладь
                             </a></span>
 
                         <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('EndlessDesert')"
-                                class="text-white" title="Прогулка с изюминкой" href="#EndlessDesert"
+                                class="text-white" title="Бескрайняя пустыня" href="#EndlessDesert"
                                 rel="tag">Бескрайняя пустыня
                             </a></span>
+                    
+                       <span class="badge rounded-pill bg-secondary"> <a onclick="selectText('CottonMountainsOfKharkov')"
+                                class="text-white" title="Хлопковые горы Харькова " href="#CottonMountainsOfKharkov"
+                                rel="tag">Хлопковые горы Харькова 
+                            </a></span>
+                  
                        <!-- //Help texts -->
                     </div>
                 </div>
