--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -3,15 +3,15 @@
 <html lang="ru">
 
 <head>
-    <title>Харьков из Запорожья | Новый поворот </title>
+    <title>Хлопковые горы Харькова | Новый поворот </title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="utf-8">
-    <meta name="description" content="Белоснежные горы Харькова, Печенежское водохранилище, Экскурсия в Харьков, Новый Поворот, Меловые горы, Харьков из Запорожья, Кицевская пустыня,
+    <meta name="description" content="Хлопковые горы Харькова, Белоснежные горы Харькова, Печенежское водохранилище, Экскурсия в Харьков, Новый Поворот, Меловые горы, Харьков из Запорожья, Кицевская пустыня,
                                       Голубая гладь, Бескрайняя пустыня">
 
     <!-- Open Graph data-->
-    <meta property="og:title" content="Экскурсия в Харьков из Запорожья">
-    <meta property="og:description" content="Белоснежные горы Харькова Печенежское водохранилище Экскурсия в Харьков Новый Поворот Меловые горы Харьков из Запорожья Кицевская пустыня Голубая гладь Бескрайняя пустыня " />
+    <meta property="og:title" content="Хлопковые горы Харькова">
+    <meta property="og:description" content="Хлопковые горы Харькова, Белоснежные горы Харькова Печенежское водохранилище Экскурсия в Харьков Новый Поворот Меловые горы Харьков из Запорожья Кицевская пустыня Голубая гладь Бескрайняя пустыня " />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://novipovorot.pp.ua/page-Kharkov.html" />
     <meta property="og:image" src="images/Kharkov-max.jpg">
@@ -93,7 +93,7 @@
                         <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a class="text-primary" href="index.html">Главная</a></li>
                             <li class="breadcrumb-item"><a class="text-primary" href="packages.html">Туры</a></li>
-                            <li class="breadcrumb-item active" aria-current="page">Экскурсия в Харьков</li>
+                            <li class="breadcrumb-item active" aria-current="page">Хлопковые горы Харькова</li>
                         </ol>
                     </nav>
                 </div>
