--- a/page-Kharkov.html
+++ b/page-Kharkov.html
@@ -114,7 +114,7 @@
                             </ul>
                         </div>
                         <h4 class="mb-3">
-                            <span id="KharkovFromZaporozhye">Харьков из Запорожья.</span><span id="ExcursionToKharkov"> Экскурсия в Харьков</span>
+                            <span id="KharkovFromZaporozhye">Харьков из Запорожья.</span><span id="ExcursionToKharkov"> Экскурсия в Харьков.</span>
                         </h4>
                         <p class="txt-alg-jf">
                             <span id="Snow-WhiteMountainsOfKharkov">Хлопковые белоснежные горы Харькова.</span> Пикник в компании
