--- a/booking.html
+++ b/booking.html
@@ -125,6 +125,7 @@
                             <div class="col-md-12 form-group contact-forms">
                                 <select name="Тур" class="form-control" id="#">
                                     <option>Тур</option>
+                                    <option>Хлопковые горы Харькова</option>
                                     <option>Яворовская Ниагара</option>
                                     <option>Запорожье на Днепре</option>
                                     <option>Львов на Выходные</option>
